# roscopter

./: .gitIgnore
roscopter/: CMakeLists.txt  package.xml
roscopter/include/roscopter/: quaternionMath.h
roscopter/launch/: copter_ublox_gps.launch  one_stop_shop.launch
roscopter/scripts/: CustomAttitudeController.cpp  CustomAttitudeController.h  Drone.cpp  Drone.h  PID_controller.cpp  PID_controller.h  TrajectoryOptimization.cpp  TrajectoryOptimization.h  config.txt  configParser.cpp  configParser.h  constants.h  gnss_ublox.py  gnss_ublox_m7.py  publish_arm.cpp
roscopter/scripts/norobo/: constants.py  drone.py  helpers.py  lqrController.py  noroboController.py  state.py  trajectory_optimization.py
roscopter/scripts/norobo/tmp/: debugEquationsOfMotion.py  log.txt  plotThrust.py
roscopter/scripts/norobo/trajectoryOptimization/: main.py  main_backup.py  testPolygon.py
roscopter/src/controller/: controller.cpp
roscopter_sim/: CMakeLists.txt
roscopter_utils/lib/geometry/: CMakeLists.txt
